# niffler-py-st3

./: duration-trend.json  index.html  retry-trend.json
10/: index.html
10/data/: suites.csv  (+6 more)
11/: index.html
14/: index.html
15/: index.html
16/: index.html
17/: index.html
18/: index.html
20/: index.html
21/: index.html
22/: index.html
24/: index.html
5/: index.html
6/: index.html
7/: index.html
8/: index.html
9/: index.html
data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
niffler-e-2-e-tests-python/: .env.example  .gitignore  README.md  conftest.py  marks.py  pyproject.toml
niffler-e-2-e-tests-python/app/components/: base_component.py  button.py  input.py  text.py  title.py
niffler-e-2-e-tests-python/app/pages/: auth_page.py  base_page.py  profile_page.py  spend_page.py
niffler-e-2-e-tests-python/clients/: auth_client.py  category_client.py  kafka_client.py  spends_client.py
niffler-e-2-e-tests-python/databases/: auth_db.py  spend_db.py  userdata_db.py
niffler-e-2-e-tests-python/fixtures/: auth_fixtures.py  client_fixtures.py  kafka_fixtures.py  pages_fixtures.py  soap_fixtures.py
niffler-e-2-e-tests-python/models/: category.py  config.py  spend.py  user.py
niffler-e-2-e-tests-python/pages/: auth_page.py  base_page.py  category_page.py  profile_page.py  spend_page.py
niffler-e-2-e-tests-python/resources/templates/: colored_response.ftl  read_templates.py
niffler-e-2-e-tests-python/tests/: test_api.py  test_api_auth.py  test_api_spends.py  test_category_db.py  test_login_page.py  test_playwright_category_db.py  test_playwright_login_page.py  test_playwright_profile_page.py  test_playwright_spending.py  test_profile_page.py  test_spending.py
niffler-e-2-e-tests-python/tests/api/: test_api_category.py  test_api_spends.py
niffler-e-2-e-tests-python/tests/kafka/: test_kafka.py
niffler-e-2-e-tests-python/tests/old/: test_category_db.py  test_login_page.py  test_profile_page.py  test_spending.py
niffler-e-2-e-tests-python/tests/soap/: test_soap.py
niffler-e-2-e-tests-python/tests/ui/: test_category_db.py  test_login_page.py  test_profile_page.py  test_spending.py
niffler-e-2-e-tests-python/tools/: fakers.py  helper.py  sessions.py  waiters.py
niffler-e-2-e-tests-python/tools/allure/: allure_helper.py  annotations.py  environment.py  reportet.py
niffler-e-2-e-tests-python/tools/assertions/: base.py  category.py  database.py  kafka.py  soap.py  spends.py
niffler-e-2-e-tests-python/tools/soap/: xml_operation.py
(+2518 files in other folders)
