[project]
name = "niffler-e-2-e-tests-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Dimitri Maksimov",email = "salesakk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pytest (>=9.0.1,<10.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "faker (>=38.0.0,<39.0.0)",
    "pytest-xdist (>=3.8.0,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "urllib3 (>=2.5.0,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "playwright (>=1.56.0,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pytest-playwright (>=0.7.2,<0.8.0)",
    "allure-pytest (>=2.15.2,<3.0.0)",
    "requests-toolbelt (>=1.0.0,<2.0.0)"
]

[tool.pytest.ini_options]
python_files = ["*_tests.py", "test_*.py"]
addopts = [
    "--alluredir", "allure-results",
    "--clean-alluredir",
    "-v",
    "-s"
]
pythonpath = '.'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
